Add Phase 2 – Pre-flight screen

--- a/index.html
+++ b/index.html
@@ -67,38 +67,38 @@
 
     <form id="phase1Form" class="checklist">
 
-      <label>
-        <input type="checkbox" />
-        Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação
-      </label>
-
-      <label>
-        <input type="checkbox" />
-        Controle de Integridade Física da Aeronave
-      </label>
-
-      <label>
-        <input type="checkbox" />
-        Verificar / carregar bateria do controle e a que estará no drone
-      </label>
-
-      <label>
-        <input type="checkbox" />
-        Inserir cartão microSD compatível
-      </label>
-
-      <label>
-        <input type="checkbox" />
-        Configurar altura do RTH
-      </label>
-
-      <label>
-        <input type="checkbox" />
-        Confirmar recepção de satélites, mínimo 12
-      </label>
+      <label><input type="checkbox" /> Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação</label>
+      <label><input type="checkbox" /> Controle de Integridade Física da Aeronave</label>
+      <label><input type="checkbox" /> Verificar / carregar bateria do controle e a que estará no drone</label>
+      <label><input type="checkbox" /> Inserir cartão microSD compatível</label>
+      <label><input type="checkbox" /> Configurar altura do RTH</label>
+      <label><input type="checkbox" /> Confirmar recepção de satélites, mínimo 12</label>
 
       <button type="submit">Concluir Fase 1</button>
+    </form>
+  </section>
 
+  <!-- TELA 4 — FASE 2: PRÉ-VOO -->
+  <section id="phase2" class="screen">
+    <h2>Fase 2 – Pré-Voo</h2>
+    <p class="subtitle">Realizada no local da missão</p>
+
+    <form id="phase2Form" class="checklist">
+
+      <label><input type="checkbox" /> Confirmar condições climáticas</label>
+      <label><input type="checkbox" /> Planejamento visual da trajetória de voo e retorno</label>
+      <label><input type="checkbox" /> Identificar obstáculos e locais para pouso de emergência</label>
+      <label><input type="checkbox" /> Controle de Integridade Física da Aeronave</label>
+      <label><input type="checkbox" /> Confirmar carga total das baterias (drone, controle, celular, rádio)</label>
+      <label><input type="checkbox" /> Verificar cartões de memória inseridos</label>
+      <label><input type="checkbox" /> Retirar tampa e trava do gimbal</label>
+      <label><input type="checkbox" /> Inserir bateria corretamente</label>
+      <label><input type="checkbox" /> Configurar RTH, limites de altura e distância</label>
+      <label><input type="checkbox" /> Confirmar recepção mínima de 12 satélites e HOMEPOINT</label>
+      <label><input type="checkbox" /> Avisar equipe que a aeronave está pronta para decolagem</label>
+      <label><input type="checkbox" /> Confirmar observador pronto</label>
+
+      <button type="submit">Concluir Pré-Voo</button>
     </form>
   </section>
 
