--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
     </form>
   </section>
 
-  <!-- TELA 3 — FASE 1: PREPARAÇÃO PARA O VOO -->
+  <!-- TELA 3 — FASE 1 -->
   <section id="phase1" class="screen">
     <h2>Fase 1 – Preparação para o Voo</h2>
     <p class="subtitle">Realizada em local seguro, antes do início da missão</p>
 
     <form id="phase1Form" class="checklist">
-
       <label><input type="checkbox" /> Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação</label>
       <label><input type="checkbox" /> Controle de Integridade Física da Aeronave</label>
       <label><input type="checkbox" /> Verificar / carregar bateria do controle e a que estará no drone</label>
@@ -78,13 +77,12 @@
     </form>
   </section>
 
-  <!-- TELA 4 — FASE 2: PRÉ-VOO -->
+  <!-- TELA 4 — FASE 2 -->
   <section id="phase2" class="screen">
     <h2>Fase 2 – Pré-Voo</h2>
     <p class="subtitle">Realizada no local da missão</p>
 
     <form id="phase2Form" class="checklist">
-
       <label><input type="checkbox" /> Confirmar condições climáticas</label>
       <label><input type="checkbox" /> Planejamento visual da trajetória de voo e retorno</label>
       <label><input type="checkbox" /> Identificar obstáculos e locais para pouso de emergência</label>
@@ -99,6 +97,29 @@
       <label><input type="checkbox" /> Confirmar observador pronto</label>
 
       <button type="submit">Concluir Pré-Voo</button>
+    </form>
+  </section>
+
+  <!-- TELA 5 — FASE 3: VOO DA AERONAVE -->
+  <section id="phase3" class="screen">
+    <h2>Fase 3 – Voo da Aeronave</h2>
+    <p class="subtitle">Durante a execução da missão</p>
+
+    <form id="phase3Form" class="checklist">
+
+      <label><input type="checkbox" /> Realizar nova verificação de obstáculos antes da decolagem</label>
+      <label><input type="checkbox" /> Decolar até altura e distância seguras</label>
+      <label><input type="checkbox" /> Testar comandos e comportamento da aeronave em relação ao vento</label>
+      <label><input type="checkbox" /> Realizar manobras curtas em todas as direções</label>
+      <label><input type="checkbox" /> Manter vigilância constante quanto à existência ou aproximação de aeronaves tripuladas</label>
+      <label><input type="checkbox" /> Verificar constantemente as condições climáticas</label>
+      <label><input type="checkbox" /> Considerar assimetria de consumo de bateria com vento</label>
+      <label><input type="checkbox" /> Manter afastamento de pássaros, fios e demais obstáculos</label>
+      <label><input type="checkbox" /> Avisar equipe que a aeronave está retornando para pouso</label>
+      <label><input type="checkbox" /> Certificar-se de que o local de pouso está livre de obstáculos</label>
+      <label><input type="checkbox" /> Pousar com a retaguarda voltada para o piloto</label>
+
+      <button type="submit">Concluir Voo da Aeronave</button>
     </form>
   </section>
 
