Add Phase 4 – Post-flight immediate screen

--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
     </form>
   </section>
 
-  <!-- TELA 5 — FASE 3: VOO DA AERONAVE -->
+  <!-- TELA 5 — FASE 3 -->
   <section id="phase3" class="screen">
     <h2>Fase 3 – Voo da Aeronave</h2>
     <p class="subtitle">Durante a execução da missão</p>
 
     <form id="phase3Form" class="checklist">
-
       <label><input type="checkbox" /> Realizar nova verificação de obstáculos antes da decolagem</label>
       <label><input type="checkbox" /> Decolar até altura e distância seguras</label>
       <label><input type="checkbox" /> Testar comandos e comportamento da aeronave em relação ao vento</label>
@@ -120,6 +119,26 @@
       <label><input type="checkbox" /> Pousar com a retaguarda voltada para o piloto</label>
 
       <button type="submit">Concluir Voo da Aeronave</button>
+    </form>
+  </section>
+
+  <!-- TELA 6 — FASE 4: PÓS-VOO IMEDIATO -->
+  <section id="phase4" class="screen">
+    <h2>Fase 4 – Pós-Voo Imediato</h2>
+    <p class="subtitle">Realizada imediatamente após o voo, ainda no local</p>
+
+    <form id="phase4Form" class="checklist">
+
+      <label><input type="checkbox" /> Colocar a trava e a tampa do gimbal</label>
+      <label><input type="checkbox" /> Inspecionar a integridade da aeronave</label>
+      <label><input type="checkbox" /> Verificar se não há sujeira ou obstruções nas câmeras e sensores</label>
+      <label><input type="checkbox" /> Retirar as hélices</label>
+      <label><input type="checkbox" /> Fechar os braços de sustentação</label>
+      <label><input type="checkbox" /> Guardar o equipamento em case próprio</label>
+      <label><input type="checkbox" /> Recolher a pista de pouso/decolagem (se utilizada)</label>
+      <label><input type="checkbox" /> Realizar check de abandono</label>
+
+      <button type="submit">Concluir Pós-Voo Imediato</button>
     </form>
   </section>
 
