Add Phase 5 – Flight conclusion screen

--- a/index.html
+++ b/index.html
@@ -122,13 +122,12 @@
     </form>
   </section>
 
-  <!-- TELA 6 — FASE 4: PÓS-VOO IMEDIATO -->
+  <!-- TELA 6 — FASE 4 -->
   <section id="phase4" class="screen">
     <h2>Fase 4 – Pós-Voo Imediato</h2>
     <p class="subtitle">Realizada imediatamente após o voo, ainda no local</p>
 
     <form id="phase4Form" class="checklist">
-
       <label><input type="checkbox" /> Colocar a trava e a tampa do gimbal</label>
       <label><input type="checkbox" /> Inspecionar a integridade da aeronave</label>
       <label><input type="checkbox" /> Verificar se não há sujeira ou obstruções nas câmeras e sensores</label>
@@ -139,6 +138,28 @@
       <label><input type="checkbox" /> Realizar check de abandono</label>
 
       <button type="submit">Concluir Pós-Voo Imediato</button>
+    </form>
+  </section>
+
+  <!-- TELA 7 — FASE 5: CONCLUSÃO DO VOO -->
+  <section id="phase5" class="screen">
+    <h2>Fase 5 – Conclusão do Voo</h2>
+    <p class="subtitle">Encerramento do procedimento operacional</p>
+
+    <form id="phase5Form" class="checklist">
+
+      <label><input type="checkbox" /> Desligar a aeronave</label>
+      <label><input type="checkbox" /> Desligar o controle remoto</label>
+      <label><input type="checkbox" /> Retirar baterias da aeronave</label>
+      <label><input type="checkbox" /> Armazenar baterias em local adequado</label>
+      <label><input type="checkbox" /> Guardar todos os equipamentos utilizados</label>
+
+      <label style="margin-top: 20px;">
+        <input type="checkbox" required />
+        Declaro que executei integralmente o checklist operacional RPAS conforme a doutrina vigente.
+      </label>
+
+      <button type="submit">Encerrar Checklist</button>
     </form>
   </section>
 
