Improve checklist UX with vertical layout, larger fonts and operational style

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
 
 <body>
 
-<!-- ===== HEADER INSTITUCIONAL ===== -->
 <header class="app-header">
   <div class="header-left">
-    <!-- Logo contínuo do COARP -->
-    <img
-      src="assets/logos/coarp.png"
-      alt="COARP"
-      class="header-logo"
-    />
+    <img src="assets/logos/coarp.png" alt="COARP" class="header-logo" />
     <span class="header-title">Checklist Operacional RPAS</span>
   </div>
 
@@ -33,13 +27,10 @@
   </div>
 </header>
 
-<!-- ===== CONTEÚDO ===== -->
 <main class="app-container">
 
-  <!-- ===== SPLASH ===== -->
+  <!-- SPLASH -->
   <section id="splash" class="screen active splash-screen">
-
-    <!-- Logos institucionais da apresentação -->
     <div class="splash-logos">
       <img src="assets/logos/pcsc.png" alt="PCSC" />
       <img src="assets/logos/saer.png" alt="SAER" />
@@ -57,10 +48,11 @@
     <button id="startBtn">Iniciar Checklist</button>
   </section>
 
-  <!-- ===== DEMAIS TELAS ===== -->
+  <!-- DEMAIS TELAS -->
   <!-- mission, phase1, phase2, phase3, phase4, phase5, pdfScreen -->
-  <!-- permanecem exatamente como no estado atual do projeto -->
-  <!-- NÃO ALTERAR NESTE PASSO -->
+  <!-- permanecem exatamente como no estado atual -->
+  <!-- apenas assegure que os formulários de checklist -->
+  <!-- utilizem class="checklist" -->
 
 </main>
 
