--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Checklist Operacional RPAS</title>
+  <title>Checklist Operacional RPAS — DEMO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
-<header class="app-header">
+<!-- ===== HEADER ===== -->
+<header class="app-header demo-header">
   <div class="header-left">
     <img src="assets/logos/coarp.png" alt="COARP" class="header-logo" />
     <span class="header-title">Checklist Operacional RPAS</span>
@@ -27,6 +28,11 @@
   </div>
 </header>
 
+<!-- ===== DEMO BANNER ===== -->
+<div class="demo-banner">
+  VERSÃO DEMONSTRATIVA — NÃO UTILIZAR EM OPERAÇÕES REAIS
+</div>
+
 <main class="app-container">
 
   <!-- SPLASH -->
@@ -41,18 +47,17 @@
     <p class="subtitle">COARP · NOARP · SAER · PCSC</p>
 
     <p class="warning">
-      Este aplicativo não autoriza voo.<br>
-      A decisão e a responsabilidade são do Piloto em Comando.
+      <strong>VERSÃO DEMONSTRATIVA</strong><br><br>
+      Este aplicativo tem finalidade exclusivamente demonstrativa.<br>
+      Não substitui procedimentos oficiais nem autoriza operações reais.
     </p>
 
-    <button id="startBtn">Iniciar Checklist</button>
+    <button id="startBtn">Iniciar Demonstração</button>
   </section>
 
   <!-- DEMAIS TELAS -->
-  <!-- mission, phase1, phase2, phase3, phase4, phase5, pdfScreen -->
-  <!-- permanecem exatamente como no estado atual -->
-  <!-- apenas assegure que os formulários de checklist -->
-  <!-- utilizem class="checklist" -->
+  <!-- mission, phase1…phase5, pdfScreen -->
+  <!-- permanecem inalteradas -->
 
 </main>
 
